# nyumba_pay_rentflow

./: README.md
backend/: .gitignore  requirements.txt
backend/nyumbapay_core/: pyproject.toml
backend/nyumbapay_core/app/: __init__.py
backend/nyumbapay_core/app/core/: config.py  database.py  exceptions.py  logging.py
backend/nyumbapay_core/app/models/: base.py  enums.py  models.py
backend/nyumbapay_core/app/repositories/: building_repo.py  landlord_repo.py  lease_repo.py  ledger_repo.py  notification_repo.py  payment_repo.py  report_repo.py  repos.py  tenant_repo.py  unit_repo.py  user_repo.py  water_reading_repo.py
backend/nyumbapay_core/app/schemas/: validation.py
backend/nyumbapay_core/core/: database.py
backend/nyumbapay_core/migrations/: env.py
backend/nyumbapay_core/migrations/versions/: 1f043947528f_add_clerk_user_id_column.py  641687878e90_initial_tables.py  65c1dc8fa389_remove_password_hash_column.py
