[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rentflow-core"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "alembic==1.13.3",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "redis[hiredis]==5.1.0",
    "httpx==0.27.2",
    "celery==5.4.0",
    "redbeat==2.2.0",
    "structlog==24.4.0",
    "opentelemetry-api==1.27.0",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-instrumentation-fastapi==0.48b0",
    "sentry-sdk[fastapi]==2.14.0",
    "tenacity==9.0.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[argon2]==1.7.4",
    "argon2-cffi==23.1.0",
    "slowapi==0.1.9",
    "africastalking==1.2.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.2",
    "testcontainers[postgres,redis]==4.8.1",
    "factory-boy==3.3.1",
    "freezegun==1.5.1",
    "respx==0.21.1",
    "time-machine==2.15.0",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = "venv"

# This is the key line
pythonPlatform = "Linux"
